--- a/index.html
+++ b/index.html
@@ -175,5 +175,78 @@
         </div>
     </section>
 </main>
+<footer>
+    <div class="footer-wrap">
+        <section class="subscribe__section">
+            <h1 class="subscribe__title">Підписатися на розсилку Вісника Юридичної Сотні</h1>
+            <div class="subscribe__btn__wrap"><a href="#" class="subscribe__btn">Підписатися</a></div>
+        </section>
+        <div class="footer__wrap">
+            <div class="wrap">
+                <div class="footer__main">
+                    <div class="footer-logo">LOGO</div>
+                    <div class="footer-nav">
+                        <ul class="footer__li-wrap">
+                            <li class="footer__li"><a href="#">Про нас</a>
+                                <ul>
+                                    <li><a href="#" class="footer__li-link">Ми в ЗМІ</a></li>
+                                    <li><a href="#" class="footer__li-link">Річні звіти</a></li>
+                                    <li><a href="#" class="footer__li-link">Для ЗМІ</a></li>
+                                    <li><a href="#" class="footer__li-link">Партнери</a></li>
+                                    <li><a href="#" class="footer__li-link">Донори</a></li>
+                                </ul>
+                            </li>
+                            <li class="footer__li"><a href="#">Діяльність</a>
+                                <ul>
+                                    <li><a href="#" class="footer__li-link"> Гаряча лінія</a></li>
+                                    <li><a href="#" class="footer__li-link"> Пам'ятки</a></li>
+                                    <li><a href="#" class="footer__li-link"> Вебінари</a></li>
+                                    <li><a href="#" class="footer__li-link"> Освіта</a></li>
+                                    <li><a href="#" class="footer__li-link"> Законопроекти</a></li>
+                                    <li><a href="#" class="footer__li-link"> Аналітика</a></li>
+                                    <li><a href="#" class="footer__li-link"> Вісник</a></li>
+                                </ul>
+                            </li>
+                            <li class="footer__li"><a href="#">Учасникам війни</a>
+                                <ul>
+                                    <li><a href="#" class="footer__li-link"> Зразки рапортів</a></li>
+                                    <li><a href="#" class="footer__li-link"> Пам'ятки</a></li>
+                                    <li><a href="#" class="footer__li-link"> Знакйти юриста</a></li>
+                                    <li><a href="#" class="footer__li-link"> Корисні контакти</a></li>
+                                    <li><a href="#" class="footer__li-link"> Історії успіху</a></li>
+                                    <li><a href="#" class="footer__li-link"> Відеоблог</a></li>
+                                </ul>
+                            </li>
+                            <li class="footer__li"><a href="#">Юристам</a>
+                                <ul>
+                                    <li><a href="#" class="footer__li-link"> Законодавча база</a></li>
+                                    <li><a href="#" class="footer__li-link"> Судова практика</a></li>
+                                    <li><a href="#" class="footer__li-link"> Хочу допомогти</a></li>
+                                </ul>
+                            </li>
+                            <li class="footer__li"><a href="#">Новини</a></li>
+                            <li class="footer__li"><a href="#">Події</a></li>
+                            <li class="footer__li"><a href="#">Контакти</a></li>
+                        </ul>
+                    </div>
+                    <div class="footer-side">
+                        <a href="#" class="link footer__link">Зробити внесок</a>
+                        <div class="footer-side__tel">
+                            <p>Номер <br> гарячої лінії: <span class="footer-side__tel-number side_text"> 0 800 308 100 </span></p>
+                        </div>
+                        <div class="footer-side__email">
+                            <p>Написати листа: <span class="footer-side__tel-number"> help@U100.ua </span></p>
+                        </div>
+                    </div>
+                    <div class="footer-bottom">
+                        <p>2018 Юридична сотня <br> Сайт створена за фінансової підтримки ПІБ</p>
+                        <div class="social"><span>f</span><span>In</span></div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
